Fix Cart not showing on Mobile

--- a/src/assets/scss/global/_navigation.scss
+++ b/src/assets/scss/global/_navigation.scss
@@ -5,16 +5,12 @@
 		background: #6195e0 !important;
 		
 	}
-
-	ul.rightnav {
-
-		@media (max-width: 991px) {
-			display: none;
-		}
-
-	}
 	
 	.cloud-container {
+
+		@media (max-width: 991px) {
+			float: right;
+		}
 		
 		@media only screen and (min-width: 768px) and (max-width: 1112px) {
 			
